# searchx

./: .gitignore  README.md  commit_30days.ps1  docker-compose.yml  package.json  progress_log.txt
app/: globals.css  page.js
app/api/search/: route.js
app/components/: SearchBar.js
backend/: .env.example  blockchain.py  database.py  hashing.py  main.py  models.py  requirements.txt  searchx.db
blockchain/: SearchVerifier.abi.json  deployment.json  package-lock.json  package.json
blockchain/contracts/: SearchVerifier.sol
blockchain/scripts/: deploy.js
blockchain/test/: SearchVerifier.test.js
contracts/: SearchX.sol
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ArchiveButton.tsx  FilterBar.tsx  Pagination.tsx  ResultCard.tsx  ResultsSkeleton.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/app/search/: page.tsx
frontend/app/verify/: page.tsx
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DriftIndicator.jsx  LedgerView.jsx  ResultCard.jsx  SearchBar.jsx
node-backend/: .env.example  package-lock.json  package.json
node-backend/data/ipfs/: Qm01873cd21bf48a077b2e2f2baa2a8c27f53c73680ae0.json  Qm026ddfa6815e62a9a9016138982117e2ec281def2fe2.json  (+45 more)
node-backend/src/: config.js  index.js
rust-private-chain/: Cargo.toml  Dockerfile  README.md
rust-private-chain/src/: lib.rs  main.rs  state.rs  types.rs
searxng/: limiter.toml  settings.yml
ui/app/: globals.css  layout.tsx  page.tsx
(+14 files in other folders)
